--- a/output/plot.ipynb
+++ b/output/plot.ipynb
@@ -28,12 +28,12 @@
     "import matplotlib.pyplot as plt\n",
     "def openreadtxt(file_name,colonne):\n",
     "    data = []\n",
-    "    file = open(file_name,'r')  #打开文件\n",
-    "    file_data = file.readlines() #读取所有行\n",
+    "    file = open(file_name,'r')  \n",
+    "    file_data = file.readlines() \n",
     "    for row in file_data:\n",
-    "        tmp_list = row.split(' ') #按‘，’切分每行的数据\n",
-    "        #tmp_list[-1] = tmp_list[-1].replace('\\n',',') #去掉换行符\n",
-    "        data.append(float(tmp_list[colonne])) #将每行数据插入data中\n",
+    "        tmp_list = row.split(' ') \n",
+    "        #tmp_list[-1] = tmp_list[-1].replace('\\n',',') \n",
+    "        data.append(float(tmp_list[colonne])) \n",
     "    return data\n",
     "vertices = openreadtxt(\"/mnt/c/Users/gaoxueying/Desktop/polytechnique/INF421/INF421/output/time.txt\",1)\n",
     "times = openreadtxt(\"/mnt/c/Users/gaoxueying/Desktop/polytechnique/INF421/INF421/output/time.txt\",5)\n",
